--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "@prisma/client": "^3.3.0",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "prisma": "^3.3.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.4",
+    "prisma": "3.3.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
