--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@prisma/client": "^3.3.0",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
