--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "joi": "^17.4.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
     "@types/node": "^16.11.4",
     "prisma": "3.3.0",
     "ts-node": "^10.4.0",
