--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "joi": "^17.4.2"
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.11.4",
     "prisma": "3.3.0",
     "ts-node": "^10.4.0",
