--- a/web/.editorconfig
+++ b/web/.editorconfig
@@ -14,7 +14,7 @@ max_line_length = off
 trim_trailing_whitespace = false
 
 
-[*.{html,js,css,ts}]
+[*.{html,js,css,ts,tsx}]
 indent_style = space
 indent_size = 2
 max_line_length = 120
