--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "ansi-regex": "^6.0.1",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
